// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ATOMIZE RULESET ## NATIVE ## 01 (null) 1`] = `null`;

exports[`ATOMIZE RULESET ## NATIVE ## 02 ({}) 1`] = `null`;

exports[`ATOMIZE RULESET ## NATIVE ## 03 ([null, undefined, {}]) 1`] = `null`;

exports[`ATOMIZE RULESET ## NATIVE ## 04 ({ color: 'red', margin: 0 }) 1`] = `
Array [
  Array [
    "color: red /*.*/",
    "margin: 0 /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 05 ([{ color: 'red' }, { margin: 0 }]) 1`] = `
Array [
  Array [
    "color: red /*.[0]*/",
  ],
  Array [
    "margin: 0 /*.[1]*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 06 (...$web: { color: 'green' }, $native: { color: 'blue' }) 1`] = `
Array [
  Array [
    "color: red /*.*/",
  ],
  Array [
    "color: blue /*./$native*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 07 atomizeRuleset(atomizeRuleset({color: 'red' 1`] = `
Array [
  Array [
    "color: red /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 08 atomizeRuleset({$web: atomizeRuleset({ color: 'red', $native: atomizeRuleset({ color: 'green' 1`] = `
Array [
  Array [
    "color: green /*.*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 11 with theme 1`] = `
Array [
  Array [
    "color: white /*.[0]*/",
    "backgroundColor: darkgreen /*.[0]*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 12 ATOMIZE modifies source object 1`] = `
Array [
  Array [
    "color: blue /*.*/",
  ],
  Array [
    "color: green /*./$native*/",
  ],
]
`;

exports[`ATOMIZE RULESET ## NATIVE ## 12 ATOMIZE modifies source object 2`] = `
Object {
  "color": "blue",
}
`;

exports[`ATOMIZE RULESET ## WEB ## 01 (null) 1`] = `null`;

exports[`ATOMIZE RULESET ## WEB ## 02 ({}) 1`] = `null`;

exports[`ATOMIZE RULESET ## WEB ## 03 ([null, undefined, {}]) 1`] = `null`;

exports[`ATOMIZE RULESET ## WEB ## 04 ({ color: 'red', margin: 0 }) 1`] = `
Array [
  Array [
    ".a { color:red /*.*/ }",
    ".b { margin:0 /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 05 ([{ color: 'red' }, { margin: 0 }]) 1`] = `
Array [
  Array [
    ".a { color:red /*.[0]*/ }",
  ],
  Array [
    ".b { margin:0 /*.[1]*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 06 (...$web: { color: 'green' }, $native: { color: 'blue' }) 1`] = `
Array [
  Array [
    ".a { color:red /*.*/ }",
  ],
  Array [
    ".b { color:green /*./$web*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 07 atomizeRuleset(atomizeRuleset({color: 'red' 1`] = `
Array [
  Array [
    ".a { color:red /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 08 atomizeRuleset({$web: atomizeRuleset({ color: 'red', $native: atomizeRuleset({ color: 'green' 1`] = `
Array [
  Array [
    ".a { color:red /*.*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 11 with theme 1`] = `
Array [
  Array [
    ".a { color:white /*.[0]*/ }",
    ".b { background-color:darkgreen /*.[0]*/ }",
  ],
  Array [
    ".c { color:black /*.[1]/$web*/ }",
    ".d { background-color:lightblue /*.[1]/$web*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 12 ATOMIZE modifies source object 1`] = `
Array [
  Array [
    ".a { color:blue /*.*/ }",
  ],
  Array [
    ".b { color:red /*./$web*/ }",
  ],
]
`;

exports[`ATOMIZE RULESET ## WEB ## 12 ATOMIZE modifies source object 2`] = `
Object {
  "color": "blue",
}
`;
